--- a/estilo.css
+++ b/estilo.css
@@ -6,9 +6,9 @@
   --fnt-tamanho-minimo-px: 14px;
   --fnt-tamanho-maximo: 22;
   --fnt-tamanho-minimo: 14;
-  --vw-tamanho-minimo-px: 280px;
+  --vw-tamanho-minimo-px: 240px;
   --vw-tamanho-maximo: 1259;
-  --vw-tamanho-minimo: 280;
+  --vw-tamanho-minimo: 240;
   font-size: calc(
     var(--fnt-tamanho-minimo-px) +
       (var(--fnt-tamanho-maximo) - var(--fnt-tamanho-minimo)) *
@@ -42,16 +42,16 @@
 .container-input-text-icon i {
   color: rgba(243, 128, 14, 1);
   font-size: 1.1rem;
-  grid-column: 1 / 2;
+  /* grid-column: 1 / 2; */
   grid-row: 1 / 2;
   z-index: 2;
   align-self: center;
   /* padding-left: 8px; */
-  padding-left: 38%;
+  /* padding-left: 38%; */
 }
 .container-input-text-icon input {
   margin: 0;
-  padding-left: 2rem;
+  /* padding-left: 2rem; */
   grid-column: 1 / 3;
   grid-row: 1 / 2;
   border: 2px solid dodgerBlue;
@@ -64,7 +64,7 @@
   transition: 0.3s;
 }
 .container-input-text-icon input[type="text"]:focus {
-  border-color: dodgerBlue;
+  /* border-color: dodgerBlue; */
   box-shadow: 0 0 8px 0 dodgerBlue;
 }
 .fnt-style {
@@ -76,4 +76,25 @@
   font-size: 1rem;
   font-weight: normal;
   color: rgba(48, 17, 228, 0.9);
+}
+
+.input-to-right {
+  padding-left: 1.6rem;
+  padding-right: 0.3rem;
+}
+
+.input-to-left {
+  padding-left: 0.3rem;
+  padding-right: 1.6rem;
+}
+
+.icon-to-right {
+  justify-self: self-end;
+  grid-column: 2 / 3;
+  padding-right: 2.7%;
+}
+
+.icon-to-left {
+  grid-column: 1 / 2;
+  padding-left: 38%;
 }
